Implement I/O Table, Refactor to C++ 11/14, Bring Full Swig support

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,10 +1,11 @@
 cmake_minimum_required(VERSION 3.22)
 project(zagros)
 
-set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_FLAGS "-fno-exceptions")
+set(CMAKE_CXX_FLAGS "-fno-rtti")
+set(CMAKE_CXX_STANDARD 11)
 
 add_subdirectory(src)
 add_subdirectory(test)
 
-add_library(zagros src/zagros.cpp)
+add_library(zagros src/vm.cpp src/io.h)
